<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.aliyun.gts.gmall.platform</groupId>
        <artifactId>trade-platform</artifactId>
        <version>1.1.0.fu-SNAPSHOT</version>
    </parent>
    <artifactId>trade-platform-bootstrap</artifactId>

    <dependencies>

        <dependency>
            <groupId>com.aliyun.gts.gmall.platform</groupId>
            <artifactId>trade-platform-server</artifactId>
        </dependency>

        <dependency>
            <groupId>com.aliyun.gts.gmall.framework</groupId>
            <artifactId>dubbo-light-provider-swagger</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.26</version>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>com.baomidou</groupId>
            <artifactId>mybatis-plus-boot-starter</artifactId>
        </dependency>

        <!-- shard sequence-->
        <dependency>
            <groupId>com.aliyun.gts.gmall.framework</groupId>
            <artifactId>shard-sequence</artifactId>
        </dependency>

        <!-- Data Source -->
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>druid-spring-boot-starter</artifactId>
        </dependency>

        <!-- Test -->
        <dependency>
            <groupId>com.aliyun.gts.gmall.framework</groupId>
            <artifactId>test-common</artifactId>
            <version>${test-common.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.aliyun.gts.gmall.framework</groupId>
            <artifactId>misc-generator</artifactId>
            <version>${misc-generator.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- mapstruct -->
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct-processor</artifactId>
        </dependency>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct-jdk8</artifactId>
        </dependency>

        <dependency>
            <groupId>com.aliyun.gts.gmall.middleware</groupId>
            <artifactId>gmall-middleware-starter</artifactId>
            <version>${middleware.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>com.aliyun.gts.gmall.middleware</groupId>
                    <artifactId>es</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.alibaba.boot</groupId>
            <artifactId>nacos-config-spring-boot-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>com.alibaba.spring</groupId>
            <artifactId>spring-context-support</artifactId>
        </dependency>

        <dependency>
            <groupId>org.mybatis.generator</groupId>
            <artifactId>mybatis-generator-core</artifactId>
        </dependency>

        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.26</version>
        </dependency>
        <dependency>
            <groupId>org.mybatis</groupId>
            <artifactId>mybatis-spring</artifactId>
            <version>2.1.2</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                <compilerArgs>
                    <arg>--add-modules=jdk.compiler</arg>
                    <arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=org.mapstruct</arg>
                    <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=org.mapstruct</arg>
                    <arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=org.mapstruct</arg>
                    <arg>--add-exports=jdk.compiler/com.sun.tools.javac.api=org.mapstruct</arg>
                </compilerArgs>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.google.code.maven-replacer-plugin</groupId>
                <artifactId>maven-replacer-plugin</artifactId>
                <version>1.4.0</version>
                <executions>
                    <execution>
                        <phase>process-sources</phase>
                        <goals>
                            <goal>replace</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <file>${docker.template.file}</file>
                    <outputFile>${docker.file}</outputFile>
                    <replacements>
                        <replacement>
                            <token>@java.options@</token>
                            <value>${java.options}</value>
                        </replacement>
                        <replacement>
                            <token>@spring.active@</token>
                            <value>${spring.active}</value>
                        </replacement>
                        <replacement>
                            <token>@base.container.version@</token>
                            <value>${base.container.version}</value>
                        </replacement>
                        <replacement>
                            <token>@project.version@</token>
                            <value>${project.version}</value>
                        </replacement>
                    </replacements>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>dev</id>
            <properties>
                <base.container.version>1.5.0</base.container.version>
                <spring.active>dev</spring.active>
                <java.options>-Xms2048m -Xmx2048m</java.options>
            </properties>
        </profile>
        <profile>
            <id>test</id>
            <properties>
                <base.container.version>1.5.0</base.container.version>
                <spring.active>test</spring.active>
                <java.options>-Xms2048m -Xmx2048m</java.options>
            </properties>
        </profile>
        <profile>
            <id>uat</id>
            <properties>
                <base.container.version>1.5.0</base.container.version>
                <spring.active>uat</spring.active>
                <java.options>-Xms2048m -Xmx2048m</java.options>
            </properties>
        </profile>
        <profile>
            <id>prod</id>
            <properties>
                <base.container.version>2.0.0</base.container.version>
                <spring.active>prod</spring.active>
                <java.options>-Xms4096m -Xmx4096m</java.options>
            </properties>
        </profile>
    </profiles>
</project>
